Don't stop loading a XUL document when an overlay is missing and report warnings about missing overlays to the JS console.  Bug 221669, r=ben, sr=jst